--- a/VisualTranslator/view/qml.qrc
+++ b/VisualTranslator/view/qml.qrc
@@ -8,5 +8,6 @@
         <file>qmldir</file>
         <file>Card.qml</file>
         <file>Gallery.qml</file>
+        <file>Microfon.qml</file>
     </qresource>
 </RCC>
